# packages/api/src/index.ts
@@ -28,6 +28,8 @@ export type Pdf = S['Pdf'];
 export type ProgressItem = S['ProgressItem'];
 export type Progress = S['Progress'];
 export type ProgressUpdate = S['ProgressUpdate'];
+export type Bookmark = S['Bookmark'];
+export type CreateBookmark = S['CreateBookmark'];
 export type JobKind = S['JobKind'];
 export type JobStatus = S['JobStatus'];
 export type Job = S['Job'];
